--- a/README
+++ b/README
@@ -41,7 +41,7 @@ http://code.google.com/p/nvidia-texture-tools/downloads/detail?name=nvidia-textu
 	$ make
 	$ sudo make install
 	
-If, after compilation, you get the error:
+If, while running VTFnix after compilation, you get the error:
 	./VTFnix: error while loading shared libraries: libIL.so.1: cannot open shared object file: No such file or directory
 	
 First, make sure /usr/local/lib is listed in the file /etc/ld.so.conf (or one of it's includes), then run sudo /sbin/ldconfig
