--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,3 +5,8 @@
 v. 0.1 - Initial Commit
 ** Adding things from my working environment on EC2
 ** Basic functionality is here, but has several (SEVERAL) bugs
+
+v. 1.0 - Initial Release
+** Basically works now
+** Ultimate minimum of features
+** Does regular sprays, animated, fading sprays
